--- a/Views/Departments/Index.cshtml
+++ b/Views/Departments/Index.cshtml
@@ -1,8 +1,10 @@
 @model IEnumerable<Estudos_MVC_Udemy_Prof_Nelio_Alves.Models.Department>
+
 @{
-    ViewData["Title"] = "Departments";
+    ViewData["Title"] = "Index";
 }
-<h2>Departments</h2>
+
+<h2>Index</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -11,29 +13,23 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new {})
-                    @Html.ActionLink("Details", "Details", new {})
-                    @Html.ActionLink("Delete", "Delete", new {})
-                </td>
-            </tr>
-        }
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
     </tbody>
 </table>
