--- a/Views/Sellers/Edit.cshtml
+++ b/Views/Sellers/Edit.cshtml
@@ -1,6 +1,6 @@
 @model Estudos_MVC_Udemy_Prof_Nelio_Alves.Models.ViewModels.SellerFormViewModel
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -10,7 +10,9 @@
 @* row -> ocupa a largura da tela *@
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        @* edit do método post *@
+        <form asp-action="Edit">
+            <input type="hidden" asp-for="Seller.Id">
             <div class="form-group">
                 <label asp-for="Seller.Name" class="control-label"></label>
                 <input asp-for="Seller.Name" class="form-control">
@@ -30,11 +32,11 @@
             <div class="form-group">
                 <label asp-for="Seller.DepartmentId" class="control-label"></label>
                 <select asp-for="Seller.DepartmentId" 
-                    asp-items="@(new SelectList(Model.Departments,"Id","Name"))" 
-                    class="form-control"></select>
+                asp-items='@(new SelectList(Model.Departments,"Id","Name"))' 
+                class="form-control"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-secondary">
+                <input type="submit" value="Save" class="btn btn-outline-warning">
             </div>
         </form>
     </div>
