--- a/Views/Sellers/Create.cshtml
+++ b/Views/Sellers/Create.cshtml
@@ -11,9 +11,15 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            @* início validação do formulario html *@
+            <div asp-validation-summary="All" class="text-danger"></div>
+            @* fim validação do formulário html *@
             <div class="form-group">
                 <label asp-for="Seller.Name" class="control-label"></label>
                 <input asp-for="Seller.Name" class="form-control">
+                @* validação por campo *@
+                <span asp-validation-for="Seller.Name" class="text-danger"></span>
+                @* fim validação por campo *@
             </div>
             <div class="form-group">
                 <label asp-for="Seller.Email" class="control-label"></label>
@@ -39,3 +45,8 @@
         </form>
     </div>
 </div>
+@* início validação do formulario js *@
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
+@* fim validação do formulário js *@
