--- a/Views/Sellers/Details.cshtml
+++ b/Views/Sellers/Details.cshtml
@@ -41,9 +41,8 @@
         </dd>
     </dl>
     
-    <form asp-action="Edit">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Edit" class="btn btn-outline-info" />
-        <a asp-action="Index" class="btn btn-outline-secondary">Back to List</a>
-    </form>
+    <div>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-info">Edit</a>
+    <a asp-action="Index" class="btn btn-outline-secondary">Back to list</a>
+</div>
 </div>
